# MechanicalClock

./: DOCUMENTATION.md  DesignDecisions.md  FiniteStateMachine.md  MechanicalClockwithOnboardRTC.ino  POWER_RECOVERY_TESTING.md  README.md  TEST_ENVIRONMENTS.md  WiFiLogger_Example.cpp  last-Chat-Summary.md  mechanical_calc_analysis.md  platformio.ini  run_clock_advance_test.bat  run_clock_advance_test.sh  run_power_recovery_test.bat  run_power_recovery_test.sh  run_single_test.sh  run_single_test_clean.sh  run_single_test_pio.sh  run_test_basic.sh  run_test_monitor.sh  run_test_simple.sh  run_tests.sh  timezone_debug_test.cpp
src/: Clock.h  Constants.h  DigitalClock.cpp  DigitalClock.h  LCDDisplay.cpp  LCDDisplay.h  LED.cpp  LED.h  MechanicalClock.cpp  MechanicalClock.h  NetworkManager.cpp  NetworkManager.h  StateManager.cpp  StateManager.h  TestFramework.h  TimeUtils.cpp  TimeUtils.h  main.cpp  main_clock_advance_test.cpp
test/: ClockAdvanceTest.cpp  DigitalClock.h  LCDDisplay.cpp  LCDDisplay.h  LED.cpp  LEDTest.cpp  MechanicalClock.cpp  MinimalTest.cpp  NetworkManager.cpp  NetworkManagerTest.cpp  PowerOffRecoveryTest.cpp  PowerRecoveryDemo.cpp  PowerRecoveryTest.cpp  PowerRecoveryTestRunner.cpp  PowerUpTest.cpp  PowerUpTestCoverage.md  README.md  SimpleTestRunner.cpp  StateManager.cpp  StateManagerTest.cpp  TestFramework.cpp  TestFramework.h  TestRunner.cpp  TestRunnerMinimal.cpp  TimeUtilsTest.cpp  platformio_test.ini
test_desktop/: CMakeLists.txt  TestFramework.h  build_and_run.bat  mechanical_clock_calc_test.cpp  run_tests_desktop.cpp
(+14 files in other folders)
